<resources>
    <string name="app_name">Ucount</string>
    <string name="show_balance">Show Balance</string>
    <string name="monthly_income_title">Monthly Earn</string>
    <string name="monthly_expenditure_title">Monthly Cost</string>
    <string name="delete_item_alarm">Are you sure to delete it?</string>
    <string name="cancle">Cancle</string>
    <string name="confirm">Confirm</string>
    <string name="new_book_prompt">Please enter the name for new book</string>
    <string name="add_cost_button_string">Cost</string>
    <string name="add_earn_button_string">Earn</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="clear">AC</string>

    <string name="page3_banner">备注</string>
    <string name="page3_edit_hint">记录点滴生活&#8230;</string>
    <string name="page3_count">0/30</string>

    <string name="stats_button_string">statistics</string>
</resources>
