<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_descripition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.yuukidach.ucount.AddDescription">

    <TextView
        android:id="@+id/page3_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page3_banner"
        android:textColor="#000"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:gravity="center"
        android:padding="12dp"/>

    <View
        android:id="@+id/page3_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/page3_banner"
        android:background="#ebe6e6"/>

    <TextView
        android:id="@+id/page3_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/page3_line"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColor="#c3c0c0"/>

    <EditText
        android:id="@+id/page3_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/page3_date"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textColor="#000"
        android:textSize="17sp"
        android:hint="@string/page3_edit_hint"
        android:textColorHint="@color/colorLightGray"
        android:background="@null"
        android:gravity="start"
        android:maxLength="30"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/page3_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page3_count"
            android:textSize="15sp"
            android:textColor="@color/colorOrange"
            android:layout_centerInParent="true"
            android:gravity="center"/>

        <at.markushi.ui.CircleButton
            android:id="@+id/page3_done"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_check"
            app:cb_color="@color/colorBlue"
            app:cb_pressedRingWidth="3dp"
            android:scaleType="fitCenter" />

    </RelativeLayout>

</android.support.percent.PercentRelativeLayout>
