<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_of_books"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.percentlayout.widget.PercentRelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context="com.yuukidach.ucount.MainActivity"
        android:animationCache="false">

        <ImageView
            android:id="@+id/header_img"
            android:src="@drawable/yui_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_heightPercent="25%" />

        <at.markushi.ui.CircleButton
            android:id="@+id/add_button"
            android:src="@drawable/type_big_99999"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="25%"
            app:layout_heightPercent="16%"
            android:layout_centerHorizontal="true"
            app:layout_marginTopPercent="17%"
            app:cb_color="#fff"
            app:cb_pressedRingWidth="2dp" />

        <androidx.percentlayout.widget.PercentRelativeLayout
            android:id="@+id/main_recycler"
            android:layout_below="@id/add_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_height="match_parent"
                android:layout_width="1dp"
                android:background="@color/colorLightSteelBlue"
                android:layout_centerHorizontal="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/in_and_out_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.percentlayout.widget.PercentRelativeLayout>

        <Button
            android:id="@+id/show_money_button"
            android:text="@string/show_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_default_shape"
            app:layout_marginTopPercent="2%" />

        <Button
            android:id="@+id/stats_button"
            android:text="@string/stats_button_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_default_shape"
            app:layout_marginTopPercent="8%" />

        <TextView
            android:id="@+id/monthly_income_title"
            android:text="@string/monthly_income_title"
            android:textColor="@color/colorSlateGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_below="@id/header_img" />

        <TextView
            android:id="@+id/monthly_earn_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:fontFamily="sans-serif-light"
            android:textSize="12sp"
            android:layout_below="@id/monthly_income_title"
            android:layout_alignStart="@id/monthly_income_title"/>

        <TextView
            android:id="@+id/monthly_cost_title"
            android:text="@string/monthly_expenditure_title"
            android:textColor="@color/colorSlateGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_gravity="end"
            android:layout_below="@id/header_img" />

        <TextView
            android:id="@+id/monthly_cost_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_below="@id/monthly_cost_title"
            android:layout_alignEnd="@id/monthly_cost_title"/>


        </androidx.percentlayout.widget.PercentRelativeLayout>

    <!-- drawer内容 -->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" >

        <ImageView
            android:id="@+id/drawer_banner"
            android:layout_height="200dp"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/wolf_star" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/book_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp" />

        <ImageButton
            android:id="@+id/add_book_button"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/notification_add"
            android:layout_marginTop="11dp"
            android:background="#00000000" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
